syntax = "proto3";

package flight.service.v1;

option java_multiple_files = true;
option java_package = "com.example.flight.grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Flight {
    string id = 1;
    string flight_name = 2;
    string source_name = 3;
    string destination_name = 4;
    double price = 5;
    int32 total_seats = 6;
    int32 available_seats = 7;
    string seat_type = 8;
    string departure_date = 9;
    string arrival_date = 10;
    string departure_time = 11;
    string arrival_time = 12;
    string availability = 13;
    string additional_info = 14;
    int32 status = 15;
    google.protobuf.Timestamp create_time = 16;
    google.protobuf.Timestamp update_time = 17;
}

message SearchFlightsRequest {
    string source_name = 1;
    string destination_name = 2;
    string departure_date = 3;
}

message GetFlightDetailsRequest {
    string flight_id = 1;
}

message SearchFlightsResponse {
    repeated Flight flights = 1;
}

message GetFlightDetailsResponse {
    Flight flight = 1;
}

message CreateFlightRequest {
    Flight flight = 1;
}

message CreateFlightResponse {
    Flight flight = 1;
}

message UpdateFlightRequest {
    string flight_id = 1;
    Flight flight = 2;
}

message UpdateFlightResponse {
    Flight flight = 1;
}

message DeleteFlightRequest {
    string flight_id = 1;
}

message UpdateSeatsRequest {
    string flight_id = 1;
    int32 available_seats = 2;
}

message UpdateSeatsResponse {
    Flight flight = 1;
}

service FlightService {
    rpc SearchFlights(SearchFlightsRequest) returns (SearchFlightsResponse);
    rpc GetFlightDetails(GetFlightDetailsRequest) returns (GetFlightDetailsResponse);

    rpc CreateFlight(CreateFlightRequest) returns (CreateFlightResponse);
    rpc UpdateFlight(UpdateFlightRequest) returns (UpdateFlightResponse);
    rpc DeleteFlight(DeleteFlightRequest) returns (google.protobuf.Empty);
}